removed some resource links in bavkend roadmap and renamed "hompage" to "website" an "download here" to "download link" in all pages.

--- a/src/html/careers/backend.html
+++ b/src/html/careers/backend.html
@@ -713,7 +713,7 @@
                   <h4 class="resource-card-title">Atom</h4>
                   <ul class="resource-card-links">
                     <li class="resource-link">
-                      <a target="_blank" href="https://atom.io/">Home Page</a>
+                      <a target="_blank" href="https://atom.io/">Website</a>
                       <span class="resource-link-badge">Link</span>
                     </li>
                     <li class="resource-link">
@@ -749,7 +749,7 @@
                   <ul class="resource-card-links">
                     <li class="resource-link">
                       <a target="_blank" href="https://vscode.dev/"
-                        >Home Page</a
+                        >Website</a
                       >
                       <span class="resource-link-badge">Link</span>
                     </li>
@@ -768,7 +768,7 @@
                   <h4 class="resource-card-title">Replit</h4>
                   <ul class="resource-card-links">
                     <li class="resource-link">
-                      <a target="_blank" href="https://repl.it">Home Page</a>
+                      <a target="_blank" href="https://repl.it">Website</a>
                       <span class="resource-link-badge">Link</span>
                     </li>
                     <li class="resource-link">
@@ -800,7 +800,7 @@
                       <a
                         target="_blank"
                         href="https://play.google.com/store/apps/details?id=com.paprbit.dcoder"
-                        >Download here</a
+                        >Download Link</a
                       >
                       <span class="resource-link-badge">Link</span>
                     </li>
@@ -814,7 +814,7 @@
                       <a
                         target="_blank"
                         href="https://play.google.com/store/apps/details?id=com.rhmsoft.code"
-                        >Download here</a
+                        >Download Link</a
                       >
                       <span class="resource-link-badge">Link</span>
                     </li>
@@ -828,7 +828,7 @@
                       <a
                         target="_blank"
                         href="https://play.google.com/store/apps/details?id=lk.visual.code.mobile"
-                        >Download here</a
+                        >Download Link</a
                       >
                       <span class="resource-link-badge">Link</span>
                     </li>
@@ -845,7 +845,7 @@
                       <a
                         target="_blank"
                         href="https://play.google.com/store/apps/details?id=ru.iiec.pydroid3"
-                        >Download here</a
+                        >Download Link</a
                       >
                       <span class="resource-link-badge">Link</span>
                     </li>
@@ -1002,21 +1002,13 @@
 
           <div class="resource-section__body">
             <p>
-              With the introduction of the Node.js runtime engine, JavaScript
-              has transformed into a powerful programming language capable of
-              developing server-side applications.
+              Node.js is a JavaScript runtime built on Chrome's V8 JavaScript
+              engine. Node.js uses an event-driven, non-blocking I/O model that
+              makes it lightweight and efficient. Node.js' package ecosystem,
+              npm, is the largest ecosystem of open source libraries in the
+              world.
             </p>
-            <p>
-              Javascript used to be just for creating interactive web pages but
-              now can also be used to develop server-side applications for a
-              wide range of purposes. Javascript can even also be used in
-              Robotics, IoT, Data Science, Analysis and Visualization, Machine
-              Learning, etc.
-            </p>
-            <p>
-              Here are some resources to help you get started with JavaScript
-              for backend development.
-            </p>
+            <p>Here are some resources to help you get started with NodeJS:</p>
           </div>
 
           <div class="resource-section__links">
@@ -1069,21 +1061,12 @@
                     >Node.js Crash Course Tutorial ~ The Net Ninja</a
                   >
                 </li>
-                <li class="resource-link">
-                  <a
-                    target="_blank"
-                    href="https://youtube.com/playlist?list=PLillGF-RfqbbnEGy3ROiLWk7JMCuSyQtX"
-                  >
-                    Everything Vanilla JavaScript tutorials plus projects to
-                    build. ~ Traversy Media</a
-                  >
-                </li>
               </ul>
             </div>
 
-            <!-- courses -->
+            <!-- Free Courses -->
             <div class="resource-card">
-              <h3 class="resource-card-title">Courses</h3>
+              <h3 class="resource-card-title">Free Courses</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a
@@ -1192,32 +1175,8 @@
                 <li class="resource-link">
                   <a
                     target="_blank"
-                    href="https://www.youtube.com/watch?v=rfscVS0vtbw"
-                    >Learn Python - Full Course for Beginners [Tutorial] ~
-                    freeCodeCamp.org</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a
-                    target="_blank"
-                    href="https://www.youtube.com/watch?v=zuxzE7--RYM"
-                    >Python Web Development | Web Development Using Djano |
-                    Python Django Tutorial | Edureka ~ edureka!</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a
-                    target="_blank"
                     href="https://www.youtube.com/watch?v=jBzwzrDvZ18"
                     >Python Backend Web Development Course (with Django) ~
-                    freeCodeCamp.org</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a
-                    target="_blank"
-                    href="https://www.youtube.com/watch?v=Z1RJmh_OqeA"
-                    >Learn Flask for Python - Full Tutorial ~
                     freeCodeCamp.org</a
                   >
                 </li>
@@ -1236,35 +1195,12 @@
                     Python Tutorials ~ Telusko</a
                   >
                 </li>
-                <li class="resource-link">
-                  <a
-                    target="_blank"
-                    href="https://www.youtube.com/playlist?list=PLzMcBGfZo4-kQkZp-j9PNyKq7Yw5VYjq9"
-                  >
-                    Python Django Tutorials ~ Tech with Tim</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a
-                    target="_blank"
-                    href="https://www.youtube.com/playlist?list=PL-osiE80TeTs4UjLw5MM6OjgkjFeUxCYH"
-                  >
-                    Flask Tutorials ~ Corey Schafer</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a
-                    target="_blank"
-                    href="https://www.youtube.com/playlist?list=PLzMcBGfZo4-n4vJJybUVV3Un_NFS5EOgX"
-                    >Flask Tutorials ~ Tech with Tim</a
-                  >
-                </li>
               </ul>
             </div>
 
-            <!-- courses -->
+            <!-- Free Courses -->
             <div class="resource-card">
-              <h3 class="resource-card-title">Courses</h3>
+              <h3 class="resource-card-title">Free Courses</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="https://www.w3schools.com/python/"
@@ -1357,12 +1293,12 @@
               <h3 class="resource-card-title">Git</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://git-scm.com/">Home Page</a>
+                  <a target="_blank" href="https://git-scm.com/">Website</a>
                   <span class="resource-link-badge">Link</span>
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://git-scm.com/downloads">
-                    Download here
+                    Download Link
                   </a>
                   <span class="resource-link-badge">Link</span>
                 </li>
@@ -1393,7 +1329,7 @@
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://desktop.github.com/">
-                    Download here
+                    Download Link
                   </a>
                   <span class="resource-link-badge">Link</span>
                 </li>
@@ -1450,7 +1386,7 @@
               <h3 class="resource-card-title">BitBucket</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://bitbucket.org/">Home Page</a>
+                  <a target="_blank" href="https://bitbucket.org/">Website</a>
                   <span class="resource-link-badge">Link</span>
                 </li>
                 <li class="resource-link">
@@ -1493,7 +1429,7 @@
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="https://www.heroku.com/platform"
-                    >Home Page</a
+                    >Website</a
                   >
                   <span class="resource-link-badge">Link</span>
                 </li>
@@ -1511,7 +1447,7 @@
               <h3 class="resource-card-title">Vercel</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://vercel.com">Home Page</a>
+                  <a target="_blank" href="https://vercel.com">Website</a>
                   <span class="resource-link-badge">Link</span>
                 </li>
                 <li class="resource-link">
@@ -1537,7 +1473,7 @@
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="https://firebase.google.com/"
-                    >Home Page</a
+                    >Website</a
                   >
                   <span class="resource-link-badge">Link</span>
                 </li>
@@ -1556,7 +1492,7 @@
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="https://www.digitalocean.com"
-                    >Home Page</a
+                    >Website</a
                   >
                   <span class="resource-link-badge">Link</span>
                 </li>
@@ -1575,7 +1511,7 @@
               <h3 class="resource-card-title">Amazon Web Services (AWS)</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://aws.amazon.com">Home Page</a>
+                  <a target="_blank" href="https://aws.amazon.com">Website</a>
                   <span class="resource-link-badge">Link</span>
                 </li>
                 <li class="resource-link">
@@ -1595,7 +1531,7 @@
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="https://cloud.google.com"
-                    >Home Page</a
+                    >Website</a
                   >
                   <span class="resource-link-badge">Link</span>
                 </li>
@@ -1622,7 +1558,7 @@
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="https://azure.microsoft.com/en-us/"
-                    >Home Page</a
+                    >Website</a
                   >
                   <span class="resource-link-badge">Link</span>
                 </li>
@@ -1796,7 +1732,7 @@
                   <ul class="resource-card-links">
                     <li class="resource-link">
                       <a href="https://www.mysql.com" target="_blank"
-                        >Home Page</a
+                        >Website</a
                       >
                       <span class="resource-link-badge">Link</span>
                     </li>
@@ -1856,7 +1792,7 @@
                   <ul class="resource-card-links">
                     <li class="resource-link">
                       <a href="https://www.mongodb.com" target="_blank"
-                        >Home Page</a
+                        >Website</a
                       >
                       <span class="resource-link-badge">Link</span>
                     </li>
@@ -1952,7 +1888,7 @@
               </p>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://expressjs.com/">Home Page</a>
+                  <a target="_blank" href="https://expressjs.com/">Website</a>
                   <span class="resource-link-badge">Link</span>
                 </li>
                 <li class="resource-link">
@@ -1985,6 +1921,23 @@
                     target="_blank"
                     href="https://www.mongodb.com/languages/express-mongodb-rest-api-tutorial"
                     >Building a REST API with Express, Node, and MongoDB</a
+                  >
+                  <span class="resource-link-badge">Article</span>
+                </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank"
+                    href="https://www.blog.duomly.com/node-js-project-ideas-for-beginners/"
+                    >7 Node JS project ideas for Beginners! [Solutions
+                    Provided!] ~ Jsbeginners.com</a
+                  >
+                  <span class="resource-link-badge">Article</span>
+                </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank"
+                    href="https://www.interviewbit.com/blog/node-js-projects/"
+                    >Top 10 Node JS Projects Ideas (With Source Code)</a
                   >
                   <span class="resource-link-badge">Article</span>
                 </li>
@@ -2039,6 +1992,37 @@
               <h3 class="resource-card-title">Videos</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
+                <li class="resource-link">
+                  <a
+                    target="_blank"
+                    href="https://www.youtube.com/playlist?list=PLzMcBGfZo4-kQkZp-j9PNyKq7Yw5VYjq9"
+                  >
+                    Python Django Tutorials ~ Tech with Tim</a
+                  >
+                </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank"
+                    href="https://www.youtube.com/playlist?list=PL-osiE80TeTs4UjLw5MM6OjgkjFeUxCYH"
+                  >
+                    Flask Tutorials ~ Corey Schafer</a
+                  >
+                </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank"
+                    href="https://www.youtube.com/playlist?list=PLzMcBGfZo4-n4vJJybUVV3Un_NFS5EOgX"
+                    >Flask Tutorials ~ Tech with Tim</a
+                  >
+                </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank"
+                    href="https://www.youtube.com/watch?v=Z1RJmh_OqeA"
+                    >Learn Flask for Python - Full Tutorial ~
+                    freeCodeCamp.org</a
+                  >
+                </li>
                   <a target="_blank" href="#"></a>
                 </li>
               </ul>
