--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -770,7 +770,7 @@
                   Atom
                   <ul class="resource-link-sublinks">
                     <li class="resource-link">
-                      <a target="_blank" href="https://atom.io/">Home Page</a>
+                      <a target="_blank" href="https://atom.io/">Website</a>
                       <span class="resource-link-badge">Link</span>
                     </li>
                     <li class="resource-link">
@@ -805,9 +805,7 @@
                   Codepen
                   <ul class="resource-link-sublinks">
                     <li class="resource-link">
-                      <a target="_blank" href="https://codepen.io/"
-                        >Home Page</a
-                      >
+                      <a target="_blank" href="https://codepen.io/">Website</a>
                       <span class="resource-link-badge">Link</span>
                     </li>
                     <li class="resource-link">
@@ -840,7 +838,7 @@
                   <ul class="resource-link-sublinks">
                     <li class="resource-link">
                       <a target="_blank" href="https://codesandbox.io/"
-                        >Home Page</a
+                        >Website</a
                       >
                       <span class="resource-link-badge">Link</span>
                     </li>
@@ -866,9 +864,7 @@
                   VsCode Online
                   <ul class="resource-link-sublinks">
                     <li class="resource-link">
-                      <a target="_blank" href="https://vscode.dev/"
-                        >Home Page</a
-                      >
+                      <a target="_blank" href="https://vscode.dev/">Website</a>
                       <span class="resource-link-badge">Link</span>
                     </li>
                     <li class="resource-link">
@@ -908,7 +904,7 @@
                       <a
                         target="_blank"
                         href="https://play.google.com/store/apps/details?id=com.paprbit.dcoder"
-                        >Download here</a
+                        >Download Link</a
                       >
                       <span class="resource-link-badge">Link</span>
                     </li>
@@ -922,7 +918,7 @@
                       <a
                         target="_blank"
                         href="https://play.google.com/store/apps/details?id=lk.visual.code.mobile"
-                        >Download here</a
+                        >Download Link</a
                       >
                       <span class="resource-link-badge">Link</span>
                     </li>
@@ -1013,9 +1009,9 @@
               </ul>
             </div>
 
-            <!-- courses -->
+            <!-- Free Courses -->
             <div class="resource-card">
-              <h3 class="resource-card-title">Courses</h3>
+              <h3 class="resource-card-title">Free Courses</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a
@@ -1284,12 +1280,12 @@
               <h3 class="resource-card-title">Git</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://git-scm.com/">Home Page</a>
+                  <a target="_blank" href="https://git-scm.com/">Website</a>
                   <span class="resource-link-badge">Link</span>
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://git-scm.com/downloads">
-                    Download here
+                    Download Link
                   </a>
                   <span class="resource-link-badge">Link</span>
                 </li>
@@ -1315,12 +1311,12 @@
               <h3 class="resource-card-title">GitHub</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://github.com/"> Home Page </a>
+                  <a target="_blank" href="https://github.com/"> Website </a>
                   <span class="resource-link-badge">Link</span>
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://desktop.github.com/">
-                    Download here
+                    Download Link
                   </a>
                   <span class="resource-link-badge">Link</span>
                 </li>
@@ -1377,7 +1373,7 @@
               <h3 class="resource-card-title">BitBucket</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://bitbucket.org/">Home Page</a>
+                  <a target="_blank" href="https://bitbucket.org/">Website</a>
                   <span class="resource-link-badge">Link</span>
                 </li>
                 <li class="resource-link">
@@ -1412,7 +1408,7 @@
               <h3 class="resource-card-title">Netlify</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://netlify.com">Home Page</a>
+                  <a target="_blank" href="https://netlify.com">Website</a>
                   <span class="resource-link-badge">Link</span>
                 </li>
                 <li class="resource-link">
@@ -1441,7 +1437,7 @@
               <h3 class="resource-card-title">Vercel</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://vercel.com">Home Page</a>
+                  <a target="_blank" href="https://vercel.com">Website</a>
                   <span class="resource-link-badge">Link</span>
                 </li>
                 <li class="resource-link">
@@ -1650,9 +1646,9 @@
               </ul>
             </div>
 
-            <!-- courses -->
+            <!-- Free Courses -->
             <div class="resource-card">
-              <h3 class="resource-card-title">Courses</h3>
+              <h3 class="resource-card-title">Free Courses</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a
@@ -1886,7 +1882,7 @@
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="https://getbootstrap.com/"
-                    >Home Page</a
+                    >Website</a
                   >
                   <span class="resource-link-badge">Link</span>
                 </li>
@@ -1938,7 +1934,7 @@
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="https://www.styled-components.com/"
-                    >Home Page</a
+                    >Website</a
                   >
                   <span class="resource-link-badge">Link</span>
                 </li>
@@ -1975,9 +1971,7 @@
 
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://tailwindcss.com/"
-                    >Home Page</a
-                  >
+                  <a target="_blank" href="https://tailwindcss.com/">Website</a>
                   <span class="resource-link-badge">Link</span>
                 </li>
                 <li class="resource-link">
@@ -2025,7 +2019,7 @@
 
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://chakra-ui.com">Home Page</a>
+                  <a target="_blank" href="https://chakra-ui.com">Website</a>
                   <span class="resource-link-badge">Link</span>
                 </li>
                 <li class="resource-link">
@@ -2125,9 +2119,7 @@
               <h3 class="resource-card-title">Sass</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://sass-lang.com/"
-                    >Home Page.</a
-                  >
+                  <a target="_blank" href="https://sass-lang.com/">Website.</a>
                   <span class="resource-link-badge">Link</span>
                 </li>
                 <li class="resource-link">
@@ -2159,7 +2151,7 @@
               <h3 class="resource-card-title">Less</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://lesscss.org/">Home Page.</a>
+                  <a target="_blank" href="https://lesscss.org/">Website.</a>
                   <span class="resource-link-badge">Link</span>
                 </li>
                 <li class="resource-link">
@@ -2182,7 +2174,7 @@
               <h3 class="resource-card-title">PostCSS</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://postcss.org/">Home Page.</a>
+                  <a target="_blank" href="https://postcss.org/">Website.</a>
                   <span class="resource-link-badge">Link</span>
                 </li>
                 <li class="resource-link">
@@ -2412,7 +2404,7 @@
 
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://reactjs.org/">Home Page</a>
+                  <a target="_blank" href="https://reactjs.org/">Website</a>
                   <span class="resource-link-badge">Link</span>
                 </li>
                 <li class="resource-link">
@@ -2478,7 +2470,7 @@
 
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://vuejs.org/">Home Page</a>
+                  <a target="_blank" href="https://vuejs.org/">Website</a>
                   <span class="resource-link-badge">Link</span>
                 </li>
                 <li class="resource-link">
@@ -2548,7 +2540,7 @@
 
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://angular.io/">Home Page</a>
+                  <a target="_blank" href="https://angular.io/">Website</a>
                   <span class="resource-link-badge">Link</span>
                 </li>
                 <li class="resource-link">
@@ -2586,7 +2578,7 @@
 
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://svelte.dev/">Home Page</a>
+                  <a target="_blank" href="https://svelte.dev/">Website</a>
                   <span class="resource-link-badge">Link</span>
                 </li>
                 <li class="resource-link">
@@ -2641,7 +2633,7 @@
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="https://www.agnosticui.com/"
-                    >Home Page</a
+                    >Website</a
                   >
                   <span class="resource-link-badge">Link</span>
                 </li>
