--- a/src/index.html
+++ b/src/index.html
@@ -148,11 +148,11 @@
                 skills needed to build themselves in the chosen career.
               </p>
               <p>
-                Here you have access to collections of ebooks, courses, videos,
-                articles, guides, tools, etc on the different careers in tech
-                including the no-code jobs. So if you are just starting your
-                career or have yet to choose a career path, then you are in the
-                right place.
+                Here you have access to collections of ebooks, free courses,
+                videos, articles, guides, tools, etc on the different careers in
+                tech including the no-code jobs. So if you are just starting
+                your career or have yet to choose a career path, then you are in
+                the right place.
               </p>
               <p>
                 You can click on one of the career cards below if you have
