--- a/src/html/careers/backend.html
+++ b/src/html/careers/backend.html
@@ -748,9 +748,7 @@
                   <h4 class="resource-card-title">VsCode Online</h4>
                   <ul class="resource-card-links">
                     <li class="resource-link">
-                      <a target="_blank" href="https://vscode.dev/"
-                        >Website</a
-                      >
+                      <a target="_blank" href="https://vscode.dev/">Website</a>
                       <span class="resource-link-badge">Link</span>
                     </li>
                     <li class="resource-link">
@@ -983,9 +981,16 @@
                 >What Programming Language Should I Learn First in 2022? ~
                 FreeCodeCamp</a
               >
+              <a
+                class="resource-link paragraph-links"
+                href="https://youtu.be/H8v44CqZwYs"
+                >The best programming language for web development ~ Programming
+                with Dan</a
+              >
             </p>
 
             <ul class="resource-card-links">
+              <h4 style="text-align: left">Current Languages Available</h4>
               <li class="resource-link">
                 <a href="#nodejs">Node.js</a>
               </li>
@@ -1017,11 +1022,9 @@
               <h3 class="resource-card-title">Videos</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a
-                    target="_blank"
-                    href="https://www.youtube.com/watch?v=TlB_eWDSMt4"
-                    >Node.js tutorial for Beginners: Learn Node in 1 Hour ~ Mosh
-                    Hamedani</a
+                  <a target="_blank" href="https://youtu.be/PkZNo7MFNFg"
+                    >Learn JavaScript. Full course for beginners. ~
+                    FreeCodeCamp</a
                   >
                 </li>
                 <li class="resource-link">
@@ -1030,6 +1033,14 @@
                     href="https://www.youtube.com/watch?v=ENrzD9HAZK4"
                     >Node.js Ultimate Beginner's Guide in 7 Easy Steps ~
                     Fireship</a
+                  >
+                </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank"
+                    href="https://www.youtube.com/watch?v=TlB_eWDSMt4"
+                    >Node.js tutorial for Beginners: Learn Node in 1 Hour ~ Mosh
+                    Hamedani</a
                   >
                 </li>
                 <li class="resource-link">
@@ -1075,7 +1086,13 @@
                     >JavaScript Algorithms and Data Structures. ~
                     FreeCodeCamp</a
                   >
-                  <span class="resource-link-badge">Free</span>
+                </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank"
+                    href="https://www.freecodecamp.org/learn/back-end-development-and-apis/"
+                    >Back End Development and APIs (NodeJs) ~ FreeCodeCamp
+                  </a>
                 </li>
                 <li class="resource-link">
                   <a
@@ -1083,7 +1100,6 @@
                     href="https://www.w3schools.com/nodejs/default.asp"
                     >Node.js Tutorial ~ W3Schools</a
                   >
-                  <span class="resource-link-badge">Free</span>
                 </li>
               </ul>
             </div>
@@ -1107,15 +1123,6 @@
             <div class="resource-card">
               <h3 class="resource-card-title">Practice Projects</h3>
               <ul class="resource-card-links">
-                <li class="resource-link">
-                  <a
-                    target="_blank"
-                    href="https://www.blog.duomly.com/node-js-project-ideas-for-beginners/"
-                    >7 Node JS project ideas for Beginners! [Solutions
-                    Provided!] ~ Jsbeginners.com</a
-                  >
-                  <span class="resource-link-badge">Article</span>
-                </li>
                 <li class="resource-link">
                   <a
                     target="_blank"
@@ -1165,6 +1172,12 @@
               <h3 class="resource-card-title">Videos</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
+                  <a target="_blank" href="https://youtu.be/kqtD5dpn9C8"
+                    >Python for Beginners - Learn Python in 1 hour ~ Programming
+                    with Mosh</a
+                  >
+                </li>
+                <li class="resource-link">
                   <a
                     target="_blank"
                     href="https://www.youtube.com/watch?v=_uQrJ0TkZlc"
@@ -1206,7 +1219,6 @@
                   <a target="_blank" href="https://www.w3schools.com/python/"
                     >Python Tutorial ~ W3Schools</a
                   >
-                  <span class="resource-link-badge">Free</span>
                 </li>
               </ul>
             </div>
@@ -1221,7 +1233,6 @@
                     href="https://dev.to/javinpaul/10-python-articles-you-can-read-this-weekend-2df8"
                     >10 Python Articles you can read this weekend</a
                   >
-                  <span class="resource-link-badge">Article</span>
                 </li>
               </ul>
             </div>
@@ -1235,7 +1246,7 @@
                     target="_blank"
                     href="https://www.freecodecamp.org/news/python-projects-junior-developers/"
                     >11 Python Projects Junior Developers Can Build for Coding
-                    Practice</a
+                    Practice ~ FreeCodeCamp</a
                   >
                   <span class="resource-link-badge">Article</span>
                 </li>
@@ -1243,7 +1254,20 @@
                   <a
                     target="_blank"
                     href="https://realpython.com/intermediate-python-project-ideas/"
-                    >13 Project Ideas for Intermediate Python Developers</a
+                    >13 Project Ideas for Intermediate Python Developers ~
+                    RealPython</a
+                  >
+                  <span class="resource-link-badge">Article</span>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtu.be/8ext9G7xspg/"
+                    >12 beginner Python projects ~ FreeCodeCamp</a
+                  >
+                  <span class="resource-link-badge">Video</span>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtu.be/XGf2GcyHPhc"
+                    >Learn Python by building 5 games ~ FreeCodeCamp</a
                   >
                   <span class="resource-link-badge">Article</span>
                 </li>
@@ -1530,9 +1554,7 @@
               <h3 class="resource-card-title">Google Cloud Platform (GCP)</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://cloud.google.com"
-                    >Website</a
-                  >
+                  <a target="_blank" href="https://cloud.google.com">Website</a>
                   <span class="resource-link-badge">Link</span>
                 </li>
                 <li class="resource-link">
@@ -1711,7 +1733,26 @@
             <p>
               Before picking your first database language, check these
               resource(s) out;
-              <a class="resource-link paragraph-links" href="">empty Link</a>
+              <a
+                class="resource-link paragraph-links"
+                href="https://youtu.be/Tk1t3WKK-ZY"
+                >What is a database in under 4 minutes ~ Linux Academy</a
+              >
+              <a
+                class="resource-link paragraph-links"
+                href="https://youtu.be/j09EQ-xlh88"
+                >What is Database ~ TechTFQ</a
+              >
+              <a
+                class="resource-link paragraph-links"
+                href="https://youtu.be/cODCpXtPHbQ"
+                >Database. Which, when and why? ~ CodeKarle</a
+              >
+              <a
+                class="resource-link paragraph-links"
+                href="https://youtu.be/ztHopE5Wnpc"
+                >Database design full course ~ FreeCodeCamp</a
+              >
             </p>
           </div>
 
@@ -1745,11 +1786,23 @@
                       <span class="resource-link-badge">Video</span>
                     </li>
                     <li class="resource-link">
+                      <a href="https://youtu.be/HXV3zeQKqGY" target="_blank"
+                        >MySQL tutorial full course ~ FreeCodeCamp</a
+                      >
+                      <span class="resource-link-badge">Video</span>
+                    </li>
+                    <li class="resource-link">
                       <a
                         href="https://www.youtube.com/watch?v=EN6Dx22cPRI"
                         target="_blank"
                         >Using MySQL with Node.js ~ Traversy Media</a
                       >
+                      <span class="resource-link-badge">Video</span>
+                    </li>
+                    <li class="resource-link">
+                      <a href="https://youtu.be/dPx1228_EYM" target="_blank"
+                        >Build a bank database using Sql ~ Great Learning
+                      </a>
                       <span class="resource-link-badge">Video</span>
                     </li>
                   </ul>
@@ -1797,10 +1850,26 @@
                       <span class="resource-link-badge">Link</span>
                     </li>
                     <li class="resource-link">
+                      <a href="https://youtu.be/ofme2o29ngU" target="_blank"
+                        >Learn MongoDB in 30 minutes ~ WebDevSimplified
+                      </a>
+                      <span class="resource-link-badge">Video</span>
+                    </li>
+                    <li class="resource-link">
                       <a
-                        href="https://www.youtube.com/watch?v=pWbMrx5rVBE"
+                        href="https://youtube.com/playlist?list=PL4cUxeGkcC9h77dJ-QJlwGlZlTd4ecZOA"
                         target="_blank"
-                        >MongoDB in 30 Minutes ~ Traversy Media</a
+                        >Complete MongoDB tutorial ~ The Net Ninja</a
+                      >
+                      <span class="resource-link-badge">Playlist</span>
+                    </li>
+                    <li class="resource-link">
+                      <a
+                        href="https://youtu.be/YlrmGs6YHHY
+"
+                        target="_blank"
+                        >MongoDB Customer Database project ~ Eduonix Learning
+                        Solutions</a
                       >
                       <span class="resource-link-badge">Video</span>
                     </li>
@@ -1859,13 +1928,26 @@
                 href="https://blog.back4app.com/backend-frameworks/"
                 >Top 10 backend frameworks – Which is the best? ~ Back4App</a
               >
+              <a
+                class="resource-link paragraph-links"
+                href="https://youtu.be/aEc_dR8dhNA"
+                >Top backend frameworks in 2022 ~ Coding for all by Newton
+                School</a
+              >
             </p>
 
-            <!-- <ul class="resource-card-links">
+            <ul class="resource-card-links">
+              <h4 style="text-align: left">Current Frameworks Available</h4>
               <li class="resource-link">
-                <a href="#expressjs">Express.js</a>
+                <a href="#expressjs">Express.js (Node.Js framework)</a>
               </li>
-            </ul> -->
+              <li class="resource-link">
+                <a href="#django">Django (Python framework)</a>
+              </li>
+              <li class="resource-link">
+                <a href="#flask">Flask (Python framework)</a>
+              </li>
+            </ul>
           </div>
 
           <div class="resource-section__links">
@@ -1873,13 +1955,9 @@
             <div id="expressjs" class="resource-card">
               <h3 class="resource-card-title">ExpressJS</h3>
               <p>
-                Express is a minimal and flexible Node.js web application
-                framework that provides a robust set of features for web and
-                mobile applications.
-              </p>
-              <p>
-                With a myriad of HTTP utility methods and middleware at your
-                disposal, creating a robust API is quick and easy.
+                ExpressJS is a web framework for Node.js that is easy to learn
+                and use. It is a minimal and flexible framework for building web
+                applications. It is designed for building RESTful APIs.
               </p>
               <p>
                 Express provides a thin layer of fundamental web application
@@ -1892,10 +1970,8 @@
                   <span class="resource-link-badge">Link</span>
                 </li>
                 <li class="resource-link">
-                  <a
-                    target="_blank"
-                    href="https://www.youtube.com/watch?v=L72fhGm1tfE"
-                    >Express JS crash course. ~ Traversy Media</a
+                  <a target="_blank" href="https://youtu.be/SccSCuHhOw0"
+                    >Learn ExpressJs in 35 minutes ~ WebDevSimplified</a
                   >
                   <span class="resource-link-badge">Video</span>
                 </li>
@@ -1904,7 +1980,16 @@
                     target="_blank"
                     in
                     href="https://www.youtube.com/playlist?list=PLp50dWW_m40Vruw9uKGNqySCNFLXK5YiO"
-                    >Express JS Tutorial for Beginners. ~ ARC Tutorials</a
+                    >ExpressJs Tutorial for Beginners. ~ ARC Tutorials</a
+                  >
+                  <span class="resource-link-badge">Playlist</span>
+                </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank"
+                    in
+                    href="https://www.youtube.com/playlist?list=PL_cUvD4qzbkwp6pxx27pqgohrsP8v1Wj2"
+                    >ExpressJs 2022 Course ~ Anson the developers</a
                   >
                   <span class="resource-link-badge">Playlist</span>
                 </li>
@@ -1912,9 +1997,25 @@
                   <a
                     target="_blank"
                     href="https://www.youtube.com/watch?v=qwfE7fSVaZM"
-                    >Node.js / Express Course Build 4 Projects</a
+                    >Build 4 projects with Nodejs/ExpressJs ~ FreeCodeCamp</a
                   >
                   <span class="resource-link-badge">Video</span>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtu.be/Dkh2IjrAkVI"
+                    >Coffee Shop website with NodeJs and ExpressJs ~ Turbo
+                    360</a
+                  >
+                  <span class="resource-link-badge">Video</span>
+                </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank"
+                    href="https://www.interviewbit.com/blog/node-js-projects/"
+                    >Top 10 Node JS Projects Ideas (With Source Code) ~
+                    InterviewBits</a
+                  >
+                  <span class="resource-link-badge">Article</span>
                 </li>
                 <li class="resource-link">
                   <a
@@ -1924,22 +2025,40 @@
                   >
                   <span class="resource-link-badge">Article</span>
                 </li>
+              </ul>
+            </div>
+
+            <!--* django -->
+            <div id="django" class="resource-card">
+              <h3 class="resource-card-title">Django</h3>
+              <p>
+                Django is a high-level Python Web framework that encourages
+                rapid development and clean, pragmatic design. It encourages the
+                use of object-oriented programming and its use of a
+                model-view-template (MVT) design pattern. Django is a
+                Python-based open source web framework that is used for
+                developing web applications.
+              </p>
+              <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a
-                    target="_blank"
-                    href="https://www.blog.duomly.com/node-js-project-ideas-for-beginners/"
-                    >7 Node JS project ideas for Beginners! [Solutions
-                    Provided!] ~ Jsbeginners.com</a
-                  >
-                  <span class="resource-link-badge">Article</span>
+                  <a target="_blank" href="https://expressjs.com/">Website</a>
+                  <span class="resource-link-badge">Link</span>
                 </li>
+              </ul>
+            </div>
+
+            <!--* flask -->
+            <div id="flask" class="resource-card">
+              <h3 class="resource-card-title">Flask</h3>
+              <p>
+                Flask is a microframework for Python, written in pure Python. It
+                is designed to be as simple as possible and easy to learn. It is
+                designed to make working with Python web applications easier.
+              </p>
+              <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a
-                    target="_blank"
-                    href="https://www.interviewbit.com/blog/node-js-projects/"
-                    >Top 10 Node JS Projects Ideas (With Source Code)</a
-                  >
-                  <span class="resource-link-badge">Article</span>
+                  <a target="_blank" href="https://expressjs.com/">Website</a>
+                  <span class="resource-link-badge">Link</span>
                 </li>
               </ul>
             </div>
@@ -1991,8 +2110,7 @@
             <div class="resource-card">
               <h3 class="resource-card-title">Videos</h3>
               <ul class="resource-card-links">
-                <li class="resource-link">
-                <li class="resource-link">
+                <!-- <li class="resource-link">
                   <a
                     target="_blank"
                     href="https://www.youtube.com/playlist?list=PLzMcBGfZo4-kQkZp-j9PNyKq7Yw5VYjq9"
@@ -2022,7 +2140,8 @@
                     >Learn Flask for Python - Full Tutorial ~
                     freeCodeCamp.org</a
                   >
-                </li>
+                </li> -->
+                <li class="resource-link">
                   <a target="_blank" href="#"></a>
                 </li>
               </ul>
