added django and flask resources.;

--- a/src/html/careers/backend.html
+++ b/src/html/careers/backend.html
@@ -199,7 +199,7 @@
 
             <!-- javascript -->
             <li class="sidebar-title">
-              <a href="#frontend">Frontend Basics</a>
+              <a href="#frontend">Basics of Frontend</a>
             </li>
 
             <!-- languages -->
@@ -289,7 +289,13 @@
               <a href="#be-frameworks">Backend Frameworks</a>
               <ul class="sidebar-sublinks">
                 <li class="sidebar-subtitle">
-                  <a href="#expressjs">Express JS</a>
+                  <a href="#expressjs">ExpressJS</a>
+                </li>
+                <li class="sidebar-subtitle">
+                  <a href="#django">Django</a>
+                </li>
+                <li class="sidebar-subtitle">
+                  <a href="#flask">Flask</a>
                 </li>
               </ul>
             </li>
@@ -1303,7 +1309,7 @@
               do that.
             </p>
             <p>
-              If you are finding Git hard to understand, you can learn Git
+              If you are finding Git hard to understand, you can learn GitHub
               Desktop created by GitHub which makes using Git less complicated.
               Use it for a while and then come back to Git. After that, you can
               choose which ever version control service you prefer among GitHub,
@@ -1371,7 +1377,7 @@
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://youtu.be/GqNAD4XoZ6k"
-                    >Using Git Desktop for beginners. ~ Kevin Powell</a
+                    >Using GitHub Desktop for beginners. ~ Kevin Powell</a
                   >
                   <span class="resource-link-badge">Video</span>
                 </li>
@@ -1934,12 +1940,17 @@
                 >Top backend frameworks in 2022 ~ Coding for all by Newton
                 School</a
               >
+              <a
+                class="resource-link paragraph-links"
+                href="https://youtu.be/NwKB4HZnIHM"
+                >Django vs Flask Comparison ~ Jelvix</a
+              >
             </p>
 
             <ul class="resource-card-links">
               <h4 style="text-align: left">Current Frameworks Available</h4>
               <li class="resource-link">
-                <a href="#expressjs">Express.js (Node.Js framework)</a>
+                <a href="#expressjs">ExpressJs (NodeJs framework)</a>
               </li>
               <li class="resource-link">
                 <a href="#django">Django (Python framework)</a>
@@ -2041,8 +2052,34 @@
               </p>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://expressjs.com/">Website</a>
+                  <a target="_blank" href="https://www.djangoproject.com/"
+                    >Website</a
+                  >
                   <span class="resource-link-badge">Link</span>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtu.be/rHux0gMZ3Eg"
+                    >Django in 1 hour ~ Programming with Mosh</a
+                  >
+                  <span class="resource-link-badge">Video</span>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://www.djangoproject.com/"
+                    >Django 7 hour course ~ Travesty Media</a
+                  >
+                  <span class="resource-link-badge">Video</span>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://www.djangoproject.com/"
+                    >Django Tutorial ~ The Net Ninja</a
+                  >
+                  <span class="resource-link-badge">Playlist</span>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtu.be/qPtScmB8CgA"
+                    >Build 3 Django Projects ~ FreeCodeCamp</a
+                  >
+                  <span class="resource-link-badge">Video</span>
                 </li>
               </ul>
             </div>
@@ -2057,8 +2094,42 @@
               </p>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://expressjs.com/">Website</a>
+                  <a
+                    target="_blank"
+                    href="https://flask.palletsprojects.com/en/2.1.x/"
+                    >Website</a
+                  >
                   <span class="resource-link-badge">Link</span>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtu.be/Qr4QMBUPxWo"
+                    >Flask full course for Web application ~ FreeCodeCamp</a
+                  >
+                  <span class="resource-link-badge">Video</span>
+                </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank"
+                    href="https://www.youtube.com/playlist?list=PLzMcBGfZo4-n4vJJybUVV3Un_NFS5EOgX"
+                    >How to make websites with Python using Flask. ~ Tech with
+                    Tim</a
+                  >
+                  <span class="resource-link-badge">Playlist</span>
+                </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank"
+                    href="https://www.youtube.com/playlist?list=PL-osiE80TeTs4UjLw5MM6OjgkjFeUxCYH"
+                    >Build a full-feature Flask application from scratch ~ Corey
+                    Schafer</a
+                  >
+                  <span class="resource-link-badge">Video</span>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtu.be/yKHJsLUENl0"
+                    >Flask ToDo App ~ Python Engineer</a
+                  >
+                  <span class="resource-link-badge">Video</span>
                 </li>
               </ul>
             </div>
@@ -2110,29 +2181,7 @@
             <div class="resource-card">
               <h3 class="resource-card-title">Videos</h3>
               <ul class="resource-card-links">
-                <!-- <li class="resource-link">
-                  <a
-                    target="_blank"
-                    href="https://www.youtube.com/playlist?list=PLzMcBGfZo4-kQkZp-j9PNyKq7Yw5VYjq9"
-                  >
-                    Python Django Tutorials ~ Tech with Tim</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a
-                    target="_blank"
-                    href="https://www.youtube.com/playlist?list=PL-osiE80TeTs4UjLw5MM6OjgkjFeUxCYH"
-                  >
-                    Flask Tutorials ~ Corey Schafer</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a
-                    target="_blank"
-                    href="https://www.youtube.com/playlist?list=PLzMcBGfZo4-n4vJJybUVV3Un_NFS5EOgX"
-                    >Flask Tutorials ~ Tech with Tim</a
-                  >
-                </li>
+                <!-- 
                 <li class="resource-link">
                   <a
                     target="_blank"
