--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -218,7 +218,7 @@
                   <a href="#github">GitHub</a>
                 </li>
                 <li class="sidebar-subtitle">
-                  <a href="#git-desktop">Git Desktop</a>
+                  <a href="#git-desktop">GitHub Desktop</a>
                 </li>
                 <li class="sidebar-subtitle">
                   <a href="#gitlab">GitLab</a>
@@ -1266,7 +1266,7 @@
               do that.
             </p>
             <p>
-              If you are finding Git hard to understand, you can learn Git
+              If you are finding Git hard to understand, you can learn GitHub
               Desktop created by GitHub which makes using Git less complicated.
               Use it for a while and then come back to Git. After that, you can
               choose which ever version control service you prefer among GitHub,
@@ -1334,7 +1334,7 @@
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://youtu.be/GqNAD4XoZ6k"
-                    >Using Git Desktop for beginners. ~ Kevin Powell</a
+                    >Using GitHub Desktop for beginners. ~ Kevin Powell</a
                   >
                   <span class="resource-link-badge">Video</span>
                 </li>
