created footer and home page and added meta data to index page.

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,39 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <!-- * SEO Meta Tags -->
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Tech Roadmap" />
+    <meta name="type" content="website" />
+    <meta name="author" content="Pelumi Akintokun, Timonwa" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Begin your career in Tech. Roadmaps, articles, and resources to help you choose a career path, start your journey and grow in tech."
+    />
+    <!-- Open Graph / Facebook Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://careerroadmap.tech" />
+    <meta property="og:title" content="Tech Roadmap" />
+    <meta
+      property="og:description"
+      content="Begin your career in Tech. Roadmaps, articles, and resources to help you choose a career path, start your journey and grow in tech."
+    />
+    <meta
+      property="og:image"
+      content="https://careerroadmap.tech/assets/seo-image.png"
+    />
+    <!-- Twitter Meta Tags -->
+    <meta property="twitter:careers__card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://careerroadmap.tech" />
+    <meta property="twitter:title" content="Tech Roadmap" />
+    <meta
+      property="twitter:description"
+      content="Begin your career in Tech. Roadmaps, articles, and resources to help you choose a career path, start your journey and grow in tech."
+    />
+    <meta
+      property="twitter:image"
+      content="https://careerroadmap.tech/assets/seo-image.png"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +54,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Tech Roadmap</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
