--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     />
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://careerroadmap.tech" />
+    <meta property="og:url" content="https://techroadmap.xyz" />
     <meta property="og:title" content="Tech Roadmap" />
     <meta
       property="og:description"
@@ -29,11 +29,11 @@
     />
     <meta
       property="og:image"
-      content="https://careerroadmap.tech/assets/seo-image.png"
+      content="https://techroadmap.xyz/assets/seo-image.png"
     />
     <!-- Twitter Meta Tags -->
     <meta property="twitter:careers__card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://careerroadmap.tech" />
+    <meta property="twitter:url" content="https://techroadmap.xyz" />
     <meta property="twitter:title" content="Tech Roadmap" />
     <meta
       property="twitter:description"
@@ -41,7 +41,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://careerroadmap.tech/assets/seo-image.png"
+      content="https://techroadmap.xyz/assets/seo-image.png"
     />
 
     <!--* Fonts -->
