--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#21394f" />
 
     <!-- * SEO Meta Tags -->
     <!-- Primary Meta Tags -->
@@ -17,7 +17,7 @@
     />
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://careerroadmap.tech" />
+    <meta property="og:url" content="https://techroadmap.xyz" />
     <meta property="og:title" content="Tech Roadmap" />
     <meta
       property="og:description"
@@ -25,11 +25,11 @@
     />
     <meta
       property="og:image"
-      content="https://careerroadmap.tech/assets/seo-image.png"
+      content="https://techroadmap.xyz/public/seo-image.png"
     />
     <!-- Twitter Meta Tags -->
     <meta property="twitter:careers__card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://careerroadmap.tech" />
+    <meta property="twitter:url" content="https://techroadmap.xyz" />
     <meta property="twitter:title" content="Tech Roadmap" />
     <meta
       property="twitter:description"
@@ -37,9 +37,9 @@
     />
     <meta
       property="twitter:image"
-      content="https://careerroadmap.tech/assets/seo-image.png"
+      content="https://techroadmap.xyz/public/seo-image.png"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
