--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,7 @@
       property="og:description"
       content="Begin your career in Tech. Roadmaps, articles, and resources to help you choose a career path, start your journey and grow in tech."
     />
-    <meta
-      property="og:image"
-      content="https://techroadmap.xyz/public/seo-image.png"
-    />
+    <meta property="og:image" content="%PUBLIC_URL%/seo-image.png" />
     <!-- Twitter Meta Tags -->
     <meta property="twitter:careers__card" content="summary_large_image" />
     <meta property="twitter:url" content="https://techroadmap.xyz" />
@@ -35,10 +32,7 @@
       property="twitter:description"
       content="Begin your career in Tech. Roadmaps, articles, and resources to help you choose a career path, start your journey and grow in tech."
     />
-    <meta
-      property="twitter:image"
-      content="https://techroadmap.xyz/public/seo-image.png"
-    />
+    <meta property="twitter:image" content="%PUBLIC_URL%/seo-image.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
