--- a/public/index.html
+++ b/public/index.html
@@ -5,50 +5,21 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#21394f" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <!-- * SEO Meta Tags -->
+    <!--* Seo Tags -->
     <!-- Primary Meta Tags -->
-    <meta name="title" content="Tech Roadmap" />
     <meta name="type" content="website" />
     <meta name="author" content="Pelumi Akintokun, Timonwa" />
-    <meta
-      name="description"
-      content="Begin your career in Tech. Roadmaps, articles, and resources to help you choose a career path, start your journey and grow in tech."
-    />
+
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://techroadmap.xyz" />
-    <meta property="og:title" content="Tech Roadmap" />
-    <meta
-      property="og:description"
-      content="Begin your career in Tech. Roadmaps, articles, and resources to help you choose a career path, start your journey and grow in tech."
-    />
     <meta property="og:image" content="%PUBLIC_URL%/seo-image.png" />
+
     <!-- Twitter Meta Tags -->
     <meta property="twitter:careers__card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://techroadmap.xyz" />
-    <meta property="twitter:title" content="Tech Roadmap" />
-    <meta
-      property="twitter:description"
-      content="Begin your career in Tech. Roadmaps, articles, and resources to help you choose a career path, start your journey and grow in tech."
-    />
     <meta property="twitter:image" content="%PUBLIC_URL%/seo-image.png" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Tech Roadmap</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
